# data-engineering-projects

./: LICENSE  Pasta 7.xlsx  README.md  registro_ponto_melhorado.csv  registro_ponto_melhorado.xlsx  registro_ponto_simulado.xlsx  runningProcessing.ipynb  testeDoc.ipynb  ~$registro_ponto_melhorado.xlsx
00-medalionModel/: 01. Project Setup.py  03. Silver - Traffic Transformations.py  05. Silver - Roads Transformation.py
01_exploring_data/: 00-arquivos.py  00-verificarArquivo.ipynb  01-loading-and-viewing-your-data.py  01-loading.py  etl.py  pipeline.py
02_data_analytics/: 02.looping.ipynb  altura.py  aws_python_shell.py  comer.ipynb  config.py  looping.py  ntb_load_tuss.ipynb  planilha.ipynb  schema.md  template.md  tuss.csv
03_functions/: ClassesTeste.py  FuncaoCartao.py  FuncaoObjeto.ipynb  TeoriaFuncoes.md  calcular.py  funcaoHello.py  retornoFuncao.py  session.py  validartipo.ipynb
04_transformations/: Apply_transformations.ipynb  arrayTest.ipynb  cond_saude.ipynb  requirements.txt
05_data_converts/: 05.+Schema+Enforce.ipynb  05.+Schema+Evolution.ipynb  08.+Convert+to+Delta.ipynb  README.md  batch_hw5.ipynb
06_logs/: buildsLogs.md
07_geradorHoras/: FolhaPonto.ipynb  Regra.md  gerador.ipynb
08_calculandoMedias/: Medias.ipynb
09_libs_poc/: deque.ipynb
10_pytest/: email.ipynb  ntb_qualidade_test.ipynb  pydeequ_colab.ipynb  validaDados.ipynb  validarArquivosVazios.ipynb  vazio.ipynb
11_PythonBasico/: 01_retornoTipo.ipynb  (+1 more)
lakehouse_stream_batch-master/api/: .dockerignore  Dockerfile  pyproject.toml
lakehouse_stream_batch-master/api/app/: main.py
(+33 files in other folders)
